# arachnida

./: .gitignore  README.md  flake.nix  pyproject.toml
docker/: scorpion.Dockerfile  spider.Dockerfile
scorpion/: __main__.py  argparse.py  image.py  log.py
spider/: __main__.py  argparse.py  log.py  parsers.py  ratelimit.py  settings.py  spider.py  url.py
